fix all backgrounds on iOS safari

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,16 @@
 @import '../../assets/styles/vars';
 @import '~bootstrap/scss/bootstrap-grid';
 
+@mixin background-blended {
+    @supports not (-webkit-overflow-scrolling: touch) {
+        @supports (background-blend-mode: soft-light) {
+            background-blend-mode: soft-light;
+            /* Texture pattern from https://www.transparenttextures.com/ */
+            background-image: url("/assets/images/patterns/buried.png");
+        }
+    }
+}
+
 .home-v3 {
     min-height: calc(100vh - 162px);
     background: $neutral-3;
@@ -142,11 +152,7 @@
         box-shadow: inset 0 0 25px rgba(#000, 0.25);
         background-color: hsl(40, 15, 70);
 
-        @supports (background-blend-mode: soft-light) {
-            background-blend-mode: soft-light;
-            /* Texture pattern from https://www.transparenttextures.com/ */
-            background-image: url("/assets/images/patterns/buried.png");
-        }
+        @include background-blended;
 
         padding: 50px 100px;
         @include media-breakpoint-down(lg) {
