--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -4,6 +4,16 @@
 
 $focus-link-background: hsl(118, 20, 41);
 
+@mixin nav-background-blended {
+    @supports not (-webkit-overflow-scrolling: touch) {
+        @supports (background-blend-mode: soft-light) {
+            background-blend-mode: soft-light;
+            /* Texture pattern from https://www.transparenttextures.com/ */
+            background-image: url("/assets/images/patterns/billie-holiday.png");
+        }
+    }
+}
+
 .container.container-navbar {
     padding: 0;
     max-width: 1400px;
@@ -152,10 +162,7 @@ nav {
             &:hover {
                 color: $neutral-2;
                 background-color: $focus-link-background;
-                @supports (background-blend-mode: soft-light) {
-                    background-blend-mode: soft-light;
-                    background-image: url("/assets/images/patterns/billie-holiday.png");
-                }
+                @include nav-background-blended;
             }
             @include media-breakpoint-down(lg) {
                 padding: 0.5em 1em;
@@ -168,10 +175,7 @@ nav {
         .active {
             cursor: default;
             background-color: $focus-link-background;
-            @supports (background-blend-mode: soft-light) {
-                background-blend-mode: soft-light;
-                background-image: url("/assets/images/patterns/billie-holiday.png");
-            }
+            @include nav-background-blended;
             color: $neutral-2;
             box-shadow: inset 0 0 20px 0 $primary-7;
         }
@@ -281,10 +285,7 @@ nav .navbar-nav li.nav-item a.nav-link:hover {
 .vrs-dropdown {
     .dropdown-menu {
         background-color: $focus-link-background;
-        @supports (background-blend-mode: soft-light) {
-            background-blend-mode: soft-light;
-            background-image: url("/assets/images/patterns/billie-holiday.png");
-        }
+        @include nav-background-blended;
         border-radius: 10px;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
@@ -296,10 +297,7 @@ nav .navbar-nav li.nav-item a.nav-link:hover {
     .dropdown-item:focus {
         background-color: $focus-link-background;
 
-        @supports (background-blend-mode: soft-light) {
-            background-blend-mode: soft-light;
-            background-image: url("/assets/images/patterns/billie-holiday.png");
-        }
+        @include nav-background-blended;
     }
 
     .dropdown-item {
@@ -317,10 +315,7 @@ nav .navbar-nav li.nav-item a.nav-link:hover {
     &:hover {
         color: $neutral-2 !important;
         background-color: $focus-link-background;
-        @supports (background-blend-mode: soft-light) {
-            background-blend-mode: soft-light;
-            background-image: url("/assets/images/patterns/billie-holiday.png");
-        }
+        @include nav-background-blended;
     }
 }
 
@@ -330,10 +325,7 @@ nav .navbar-nav li.nav-item a.nav-link:hover {
         padding: 2em;
         box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.25);
         background-color: $focus-link-background;
-        @supports (background-blend-mode: soft-light) {
-            background-blend-mode: soft-light;
-            background-image: url("/assets/images/patterns/billie-holiday.png");
-        }
+        @include nav-background-blended;
         width: 100%;
         margin-top: 0px;
         border-radius: 0px;
